out
test.cpp: In function ‘void solve()’:
test.cpp:334:45: error: a function-definition is not allowed here before ‘{’ token
  334 |         auto move(vl &is, ll p, ll k) -> ll {
      |                                             ^
test.cpp: In lambda function:
test.cpp:344:21: error: no matching function for call to ‘move(__gnu_cxx::__alloc_traits<std::allocator<std::__debug::vector<long long int> >, std::__debug::vector<long long int> >::value_type&, ll&, ll&)’
  344 |             p = move(is[0], p, k);
      |                 ~~~~^~~~~~~~~~~~~
In file included from /usr/include/c++/12/bits/stl_pair.h:61,
                 from /usr/include/c++/12/bits/stl_algobase.h:64,
                 from /usr/include/c++/12/bits/specfun.h:45,
                 from /usr/include/c++/12/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/12/bits/move.h:104:5: note: candidate: ‘template<class _Tp> constexpr typename std::remove_reference<_Tp>::type&& std::move(_Tp&&)’
  104 |     move(_Tp&& __t) noexcept
      |     ^~~~
/usr/include/c++/12/bits/move.h:104:5: note:   template argument deduction/substitution failed:
test.cpp:344:21: note:   candidate expects 1 argument, 3 provided
  344 |             p = move(is[0], p, k);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note: candidate: ‘template<class _II, class _OI> constexpr _OI std::move(_II, _II, _OI)’
  644 |     move(_II __first, _II __last, _OI __result)
      |     ^~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note:   template argument deduction/substitution failed:
test.cpp:344:21: note:   deduced conflicting types for parameter ‘_II’ (‘std::__debug::vector<long long int>’ and ‘long long int’)
  344 |             p = move(is[0], p, k);
      |                 ~~~~^~~~~~~~~~~~~
In file included from /usr/include/c++/12/algorithm:73,
                 from stdc++.h:65:
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note: candidate: ‘template<class _ExecutionPolicy, class _ForwardIterator1, class _ForwardIterator2> __pstl::__internal::__enable_if_execution_policy<_ExecutionPolicy, _ForwardIterator2> std::move(_ExecutionPolicy&&, _ForwardIterator1, _ForwardIterator1, _ForwardIterator2)’
  353 | move(_ExecutionPolicy&& __exec, _ForwardIterator1 __first, _ForwardIterator1 __last, _ForwardIterator2 __d_first);
      | ^~~~
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note:   template argument deduction/substitution failed:
test.cpp:344:21: note:   candidate expects 4 arguments, 3 provided
  344 |             p = move(is[0], p, k);
      |                 ~~~~^~~~~~~~~~~~~
test.cpp:346:21: error: no matching function for call to ‘move(__gnu_cxx::__alloc_traits<std::allocator<std::__debug::vector<long long int> >, std::__debug::vector<long long int> >::value_type&, ll&, int)’
  346 |             p = move(is[1], p, 1);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/bits/move.h:104:5: note: candidate: ‘template<class _Tp> constexpr typename std::remove_reference<_Tp>::type&& std::move(_Tp&&)’
  104 |     move(_Tp&& __t) noexcept
      |     ^~~~
/usr/include/c++/12/bits/move.h:104:5: note:   template argument deduction/substitution failed:
test.cpp:346:21: note:   candidate expects 1 argument, 3 provided
  346 |             p = move(is[1], p, 1);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note: candidate: ‘template<class _II, class _OI> constexpr _OI std::move(_II, _II, _OI)’
  644 |     move(_II __first, _II __last, _OI __result)
      |     ^~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note:   template argument deduction/substitution failed:
test.cpp:346:21: note:   deduced conflicting types for parameter ‘_II’ (‘std::__debug::vector<long long int>’ and ‘long long int’)
  346 |             p = move(is[1], p, 1);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note: candidate: ‘template<class _ExecutionPolicy, class _ForwardIterator1, class _ForwardIterator2> __pstl::__internal::__enable_if_execution_policy<_ExecutionPolicy, _ForwardIterator2> std::move(_ExecutionPolicy&&, _ForwardIterator1, _ForwardIterator1, _ForwardIterator2)’
  353 | move(_ExecutionPolicy&& __exec, _ForwardIterator1 __first, _ForwardIterator1 __last, _ForwardIterator2 __d_first);
      | ^~~~
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note:   template argument deduction/substitution failed:
test.cpp:346:21: note:   deduced conflicting types for parameter ‘_ForwardIterator1’ (‘long long int’ and ‘int’)
  346 |             p = move(is[1], p, 1);
      |                 ~~~~^~~~~~~~~~~~~
test.cpp:348:21: error: no matching function for call to ‘move(__gnu_cxx::__alloc_traits<std::allocator<std::__debug::vector<long long int> >, std::__debug::vector<long long int> >::value_type&, ll&, ll&)’
  348 |             p = move(is[2], p, k);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/bits/move.h:104:5: note: candidate: ‘template<class _Tp> constexpr typename std::remove_reference<_Tp>::type&& std::move(_Tp&&)’
  104 |     move(_Tp&& __t) noexcept
      |     ^~~~
/usr/include/c++/12/bits/move.h:104:5: note:   template argument deduction/substitution failed:
test.cpp:348:21: note:   candidate expects 1 argument, 3 provided
  348 |             p = move(is[2], p, k);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note: candidate: ‘template<class _II, class _OI> constexpr _OI std::move(_II, _II, _OI)’
  644 |     move(_II __first, _II __last, _OI __result)
      |     ^~~~
/usr/include/c++/12/bits/stl_algobase.h:644:5: note:   template argument deduction/substitution failed:
test.cpp:348:21: note:   deduced conflicting types for parameter ‘_II’ (‘std::__debug::vector<long long int>’ and ‘long long int’)
  348 |             p = move(is[2], p, k);
      |                 ~~~~^~~~~~~~~~~~~
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note: candidate: ‘template<class _ExecutionPolicy, class _ForwardIterator1, class _ForwardIterator2> __pstl::__internal::__enable_if_execution_policy<_ExecutionPolicy, _ForwardIterator2> std::move(_ExecutionPolicy&&, _ForwardIterator1, _ForwardIterator1, _ForwardIterator2)’
  353 | move(_ExecutionPolicy&& __exec, _ForwardIterator1 __first, _ForwardIterator1 __last, _ForwardIterator2 __d_first);
      | ^~~~
/usr/include/c++/12/pstl/glue_algorithm_defs.h:353:1: note:   template argument deduction/substitution failed:
test.cpp:348:21: note:   candidate expects 4 arguments, 3 provided
  348 |             p = move(is[2], p, k);
      |                 ~~~~^~~~~~~~~~~~~
